[gd_scene load_steps=10 format=3 uid="uid://10h8qxtfap0i"]

[ext_resource type="Script" uid="uid://c3nmxcx4saft2" path="res://Scripts/ZEPassword.gd" id="1_ld0he"]
[ext_resource type="FontFile" uid="uid://d1u2twwcxxbjc" path="res://Fonts/pcsenior.ttf" id="2_7y0wk"]
[ext_resource type="Texture2D" uid="uid://bux0jend2lpdp" path="res://Assets/ui_focus_gradient.png" id="2_rjc3s"]


[sub_resource type="Animation" id="Animation_7y0wk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ld0he"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjc3s"]
_data = {
&"RESET": SubResource("Animation_7y0wk"),
&"fade_in": SubResource("Animation_ld0he")
}


[sub_resource type="Animation" id="Animation_7y0wk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ld0he"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjc3s"]
_data = {
&"RESET": SubResource("Animation_7y0wk"),
&"fade_in": SubResource("Animation_ld0he")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g4jjh"]
texture = ExtResource("2_rjc3s")
modulate_color = Color(0.600845, 0.894681, 0.467237, 1)


[node name="ZEPassword" type="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
process_mode = 3
modulate = Color(1, 1, 1, 0)


[node name="Animator" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_rjc3s")
}

[node name="PasswordWindow" type="ColorRect" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 184.0
offset_top = 10.0
offset_right = 456.0
offset_bottom = 290.0
pivot_offset = Vector2(160, 112)
mouse_filter = 2
color = Color(0.32549, 0, 0, 0.435294)
metadata/_edit_group_ = true

[node name="WindowBorder" type="Line2D" parent="PasswordWindow"]
position = Vector2(2.11446, 4.3983)
scale = Vector2(1.70482, 2.4661)
points = PackedVector2Array(160, 0, 0, 0, 0, 112, 160, 112)
closed = true
width = 3.0
default_color = Color(0.45098, 0, 0, 1)

[node name="ButtonBox" type="Control" parent="."]
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Button1" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 274.0
offset_top = 147.0
offset_right = 298.0
offset_bottom = 171.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button2" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 306.0
offset_top = 147.0
offset_right = 330.0
offset_bottom = 171.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button3" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 338.0
offset_top = 147.0
offset_right = 362.0
offset_bottom = 171.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button4" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 274.0
offset_top = 172.0
offset_right = 298.0
offset_bottom = 196.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button5" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 306.0
offset_top = 172.0
offset_right = 330.0
offset_bottom = 196.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button6" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 338.0
offset_top = 172.0
offset_right = 362.0
offset_bottom = 196.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button7" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 274.0
offset_top = 197.0
offset_right = 298.0
offset_bottom = 221.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button8" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 306.0
offset_top = 197.0
offset_right = 330.0
offset_bottom = 221.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button9" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 338.0
offset_top = 197.0
offset_right = 362.0
offset_bottom = 221.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="ButtonC" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 274.0
offset_top = 222.0
offset_right = 298.0
offset_bottom = 246.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="Button0" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 306.0
offset_top = 222.0
offset_right = 330.0
offset_bottom = 246.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true

[node name="ButtonE" type="Button" parent="ButtonBox" groups=["pw_buttons"]]
layout_mode = 0
offset_left = 338.0
offset_top = 222.0
offset_right = 362.0
offset_bottom = 246.0
theme_override_styles/focus = SubResource("StyleBoxTexture_g4jjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_vvqjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_os53d")
metadata/_edit_lock_ = true


[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rjc3s")
}

[node name="PasswordWindow" type="ColorRect" parent="."]
process_mode = 3
offset_left = 184.0
offset_top = 10.0
offset_right = 456.0
offset_bottom = 290.0
pivot_offset = Vector2(160, 112)
mouse_filter = 1
color = Color(0.32549, 0, 0, 0.435294)
metadata/_edit_group_ = true

[node name="WindowBorder" type="Line2D" parent="PasswordWindow"]
position = Vector2(2.11446, 4.3983)
scale = Vector2(1.70482, 2.4661)
points = PackedVector2Array(160, 0, 0, 0, 0, 112, 160, 112)
closed = true
width = 3.0
default_color = Color(0.45098, 0, 0, 1)



metadata/_edit_lock_ = true
metadata/_edit_group_ = true


process_mode = 3
wait_time = 0.5
one_shot = true

[node name="LevelChangeTimer" type="Timer" parent="."]
process_mode = 3
one_shot = true

[connection signal="focus_entered" from="ButtonBox/Button1" to="." method="_on_button_1_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button1" to="." method="_on_button_1_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button2" to="." method="_on_button_2_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button3" to="." method="_on_button_3_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button3" to="." method="_on_button_3_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button4" to="." method="_on_button_4_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button4" to="." method="_on_button_4_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button4" to="." method="_on_button_4_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button5" to="." method="_on_button_5_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button5" to="." method="_on_button_5_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button5" to="." method="_on_button_5_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button6" to="." method="_on_button_6_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button6" to="." method="_on_button_6_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button6" to="." method="_on_button_6_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button7" to="." method="_on_button_7_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button7" to="." method="_on_button_7_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button7" to="." method="_on_button_7_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button8" to="." method="_on_button_8_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button8" to="." method="_on_button_8_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button8" to="." method="_on_button_8_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button9" to="." method="_on_button_9_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button9" to="." method="_on_button_9_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button9" to="." method="_on_button_9_pressed"]
[connection signal="focus_entered" from="ButtonBox/ButtonC" to="." method="_on_button_c_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/ButtonC" to="." method="_on_button_c_mouse_entered"]
[connection signal="pressed" from="ButtonBox/ButtonC" to="." method="_on_button_c_pressed"]
[connection signal="focus_entered" from="ButtonBox/Button0" to="." method="_on_button_0_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/Button0" to="." method="_on_button_0_mouse_entered"]
[connection signal="pressed" from="ButtonBox/Button0" to="." method="_on_button_0_pressed"]
[connection signal="focus_entered" from="ButtonBox/ButtonE" to="." method="_on_button_e_focus_entered"]
[connection signal="mouse_entered" from="ButtonBox/ButtonE" to="." method="_on_button_e_mouse_entered"]
[connection signal="pressed" from="ButtonBox/ButtonE" to="." method="_on_button_e_pressed"]
[connection signal="timeout" from="EffectTimer" to="." method="_on_effect_timer_timeout"]
[connection signal="timeout" from="BufferTimer" to="." method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="LevelChangeTimer" to="." method="_on_level_change_timer_timeout"]

wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="EffectTimer" to="." method="_on_effect_timer_timeout"]
[connection signal="timeout" from="BufferTimer" to="." method="_on_buffer_timer_timeout"]

